--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 
     <!-- Botão do balão flutuante -->
     <div id="chat-launcher" class="chat-launcher">
-      ⚖️ Fale com nosso assistente agora e seja direcionado a um advogado em minutos.
+      <span class="chat-launcher-icon">⚖️</span>
+      <span class="chat-launcher-text">Fale com nosso assistente e seja direcionado a um advogado em minutos..</span>
     </div>
 
     <!-- Banner do Replit -->
