Fix React DOM Integration - Strategic Approach

--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
     <!-- Botão do balão flutuante -->
     <div id="chat-launcher" class="chat-launcher">
       <span class="chat-launcher-icon">⚖️</span>
-      <span class="chat-launcher-text">Fale com nosso assistente e seja direcionado a um advogado em minutos..</span>
+      <span class="chat-launcher-text">Fale com nosso assistente e seja direcionado a um advogado em minutos.</span>
     </div>
     
     <!-- Banner do Replit -->
     <script type="text/javascript" src="https://replit.com/public/js/replit-dev-banner.js"></script>
 
     <!-- Chat Script -->
-    <script src="./assets/chat.js" defer></script>
+    <script src="./assets/chat.js"></script>
   </body>
 </html>
